fix gap for mobile view

--- a/src/assets/css/sections/header.css
+++ b/src/assets/css/sections/header.css
@@ -174,7 +174,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        gap: var(--spacing-md);
+        gap: 1.6em;
         transform: translateX(100%);
         transition: transform 0.4s ease-in-out;
         box-sizing: border-box;
